# ferris-db

./: .gitignore  Cargo.toml  README.md
src/: command.rs  lib.rs  main.rs  server.rs  store.rs
src/cli/: mod.rs
src/core/: command.rs  error.rs  mod.rs  store.rs
src/persistence/: file.rs  mod.rs
src/server/: mod.rs
