[package]
name = "ferris-db"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ferris-db"
path = "src/main.rs"

[[bin]]
name = "ferris-cli"
path = "src/bin/ferris-cli.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
